welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:7: error: not found: value occurence
      if (occurence==3){
          ^noTriples:12: error: not found: value occurence
      occurence=1
      ^noTriples:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-1 to nums.length-1){
        ^